feat: update to Spring Boot 4 (and related libraries)
BREAKING CHANGE: several import paths from the updated libraries
might need to get updated in child projects